partially fixed speedometer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<input type="submit" value="Log In">
 			</a>
 			<a href="status.html">
-				<input type="submit" value="Log In">
+				<input type="submit" value="Sign up">
 			</a>
 		</div>
 	</div>
