added signup page, several changes to status.html

--- a/signup.html
+++ b/signup.html
@@ -12,14 +12,13 @@
 			<img src="img/logo.png" alt="logo">
 		</div>
 		<div class="login-input">
+			<h1>Create a New User</h1>
 			<input type="text" placeholder="Username">
 			<input type="text" placeholder="Password">
+			<input type="text" placeholder="Confirm Password">
 		</div>
 		<div class="login-buttons">
 			<a href="status.html">
-				<input type="submit" value="Log In">
-			</a>
-			<a href="signup.html">
 				<input type="submit" value="Sign up">
 			</a>
 		</div>
