--- a/status.html
+++ b/status.html
@@ -20,8 +20,16 @@
 
     <div class="info">
         <div class="info-text">
+            <h5>Speed</h5>
+            <p id="speed">20</p>
+        </div>
+        <div class="info-text">
+            <h5>Moisture</h5>
+            <p id="moisture">20</p>
+        </div>
+        <div class="info-text">
             <h5>Humidity</h5>
-            <p id="humidity"></p>
+            <p id="humidity">20</p>
         </div>
         <div class="info-text">
             <h5>Temperature</h5>
@@ -32,11 +40,11 @@
     <div class="switches">
         <div class="switch">
             <h5>MODE</h5>
-            <h3>OFF</h3>
+            <h3 id="mode-toggle">OFF</h3>
         </div>
         <div class="switch">
             <h5>WATER SUPPLY</h5>
-            <h3>OFF</h3>
+            <h3 id="water-supply-toggle">OFF</h3>
         </div>
     </div>
 
